Change multivac service configuration
Multivac is not longer directly facing the internet therefore it does
not require external IP

--- a/k8/multivac/multivac-service.yaml
+++ b/k8/multivac/multivac-service.yaml
@@ -5,11 +5,9 @@ metadata:
     app: multivac
   name: multivac
 spec:
-  type: LoadBalancer
+  type: ClusterIP
   ports:
-    - port: 80
-      targetPort: 5000
-      protocol: TCP 
+    - port: 5000
   selector:
     app: multivac
 
