--- a/k8/nginx/nginx-service.yaml
+++ b/k8/nginx/nginx-service.yaml
@@ -7,9 +7,14 @@ metadata:
 spec:
   type: LoadBalancer
   ports:
-    - port: 80
+    - name: http
+      port: 80
       targetPort: 80
       protocol: TCP 
+    - name: https
+      port: 443
+      targetPort: 443
+      protocol: TCP
   selector:
     app: nginx
 
