Add https to nginx in the docker image

--- a/k8/nginx/docker/Dockerfile
+++ b/k8/nginx/docker/Dockerfile
@@ -1,4 +1,6 @@
 FROM nginx:1.14
 ADD multivac.conf /etc/nginx/conf.d
 ADD .htpasswd /etc/nginx/
+ADD cacert.cert /etc/nginx/cacert.cert
+ADD cacert.key /etc/nginx/cacert.key
 RUN [ "rm", "-f", "/etc/nginx/conf.d/default.conf"]
