--- a/k8/nginx/docker/multivac.conf
+++ b/k8/nginx/docker/multivac.conf
@@ -1,7 +1,12 @@
 server {
     listen       80;
-    server_name  localhost;
-    error_log  /var/log/nginx_error.log;
+    return 301 https://$host$request_uri;
+}
+
+server {
+    listen 443 ssl;
+    ssl_certificate /etc/nginx/cacert.cert;
+    ssl_certificate_key /etc/nginx/cacert.key;	
 
     location / {
       auth_basic           "Administrators Area";
@@ -10,5 +15,4 @@ server {
       proxy_redirect     off;
       proxy_set_header   Host $host;
     }
-  	
 }
