--- a/k8/nginx/docker/multivac.conf
+++ b/k8/nginx/docker/multivac.conf
@@ -9,6 +9,13 @@ server {
     ssl_certificate_key /etc/nginx/cacert.key;	
 
     location / {
+      proxy_pass         http://multivac:5000;
+      proxy_redirect     off;
+      proxy_set_header   Host $host;
+    }
+
+
+    location /multivac {
       auth_basic           "Administrators Area";
       auth_basic_user_file /etc/nginx/.htpasswd;
       proxy_pass         http://multivac:5000;
