Add readiness probe for nginx
Nginx was failing because it started to receive requests and wasn't
ready to serve them properly which caused the pods to fail in situation
of high cluster load.

--- a/k8/nginx/nginx.yaml
+++ b/k8/nginx/nginx.yaml
@@ -19,3 +19,7 @@ spec:
           ports:
             - containerPort: 80
               name: nginx
+          readinessProbe:
+              httpGet:
+                  path: /
+                  port: 80
