Add readiness probe to multivac
Eventhough there was no problem in the starting of multivac containers
even in high loads, it's good practise to have a readiness probe that
reflects that the service is really ready.

--- a/k8/multivac/multivac.yaml
+++ b/k8/multivac/multivac.yaml
@@ -5,7 +5,6 @@ metadata:
   labels:
     app: multivac
 spec:
-  replicas: 1
   selector:
     matchLabels:
       app: multivac
@@ -20,3 +19,7 @@ spec:
           ports:
             - containerPort: 5000
               name: multivac
+          readinessProbe:
+              httpGet:
+                  path: /
+                  port: 5000
