Divide Multivac and Multivac worker docker files

--- a/MultiVAC/Dockerfile-worker
+++ b/MultiVAC/Dockerfile-worker
@@ -2,5 +2,4 @@ FROM  python:3
 ADD . /multivac
 WORKDIR /multivac
 RUN pip install -r requirements.txt
-CMD [ "python", "manage.py","runserver" ]
-
+CMD [ "python", "manage.py","worker" ]
